# pic2video

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: routes_morph.py  schemas.py
app/core/: config.py  exceptions.py  logging.py
app/morph/: base.py  classical_morph.py  pipeline.py
app/services/: morph_service.py  storage_service.py
docker/: Dockerfile
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
web/static/: app.js  styles.css
web/templates/: index.html
